added active_storage and action_text

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "new_portfolio",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/actiontext": "^6.0.0-beta1",
+    "trix": "^1.0.0"
+  }
 }
