--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/actiontext": "^6.0.0-beta1",
+    "@rails/webpacker": "^4.0.7",
     "trix": "^1.0.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.7.2"
   }
 }
